# ras

./: Cargo.toml  cspell.jsonc  main.s  readme.md
.github/workflows/: build-and-test.yml  release.yml
src/: error.rs  globals.rs  lexer.rs  main.rs  token.rs  utils.rs
src/elf/: constants.rs  elf64.rs  mod.rs
src/encoder/: addr.rs  mod.rs  stack_op.rs
src/encoder/arch/x86_64/: bin_const.rs  instructions.rs  mod.rs  registers.rs
