[package]
name = "ras"
version = "0.1.0"
edition = "2021"
description = "A small assembler."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.1", features = ["derive"] }
once_cell = "1.18.0"
thiserror = "1.0.40"

[dev-dependencies]
anyhow = "1.0.71"
pretty_assertions = "1.3.0"
